commit 274e98f9b37823b7d267449a3604e954376de333
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 27 10:51:39 2015 +0200

    Logs

commit c30b305beaf516a6d54f6fcef04e95412f03855e
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 27 10:50:40 2015 +0200

    Logs

commit f84706c47a53542a6c06d46bf4dc1fa0d3cb7a57
Author: caspar <casparlant@gmail.com>
Date:   Wed Jul 22 13:48:22 2015 +0200

    Added Java 7 Test Cases and Constants

commit 68cc29fbf76343ff7081ac8586d1dbab9a6758b6
Author: caspar <casparlant@gmail.com>
Date:   Wed Jul 22 11:35:14 2015 +0200

    Logs

commit 0c5f8c2762424b5d508f3a0d0d0920d10d4db3f3
Author: caspar <casparlant@gmail.com>
Date:   Wed Jul 22 11:34:34 2015 +0200

    Clean Up

commit 63b977140ceba547b834015a2d9389f5920b691c
Author: Caspar Lant <casparlant@gmail.com>
Date:   Tue Jul 21 14:53:54 2015 +0200

    Update README.md

commit 2b66649594f6c6d3906573c815d76b769b3eeaf2
Author: Caspar Lant <casparlant@gmail.com>
Date:   Tue Jul 21 14:46:55 2015 +0200

    Update README.md

commit 14cd2a9be98acd9680cb858e1aec289b409a6d73
Author: caspar <casparlant@gmail.com>
Date:   Tue Jul 21 14:29:13 2015 +0200

    Screwing the pooch

commit be2ee9fa126664b20718c3348a1879d44c2e174a
Author: caspar <casparlant@gmail.com>
Date:   Tue Jul 21 11:32:26 2015 +0200

    Logs

commit 6107160b5bdc79433a859c336e0c919b33a78645
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 20 16:29:40 2015 +0200

    More Unit Tests. Packages are whack

commit 789030ebe94fbfa669ef13b184ed220f29c4f4ed
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 20 12:47:18 2015 +0200

    Logs

commit b678a771ab1f269fb15e1b7959cabfe48a929cca
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 20 11:49:55 2015 +0200

    ChangeLog

commit 13e37699f09c9ddb08e8bb38eafbfa8423067a0c
Author: caspar <casparlant@gmail.com>
Date:   Mon Jul 20 11:48:25 2015 +0200

    Updated Java 8 Unit Tests

commit 0a592fc5124fb8a1870fdee44fcac7dec7d39a2c
Author: caspar <casparlant@gmail.com>