@@ -1,3 +1,15 @@
+commit f985731a07f0a32b34981ba96759e9aecc6b1e0b
+Author: caspar <casparlant@gmail.com>
+Date:   Wed Jul 29 16:42:44 2015 +0200
+
+    Bang bang more test cases{
+
+commit ebb44096e3bce186fe92c3f1b1a8f94a92c6d9a8
+Author: caspar <casparlant@gmail.com>
+Date:   Tue Jul 28 15:38:29 2015 +0200
+
+    GUI Automation
+
 commit 274e98f9b37823b7d267449a3604e954376de333
 Author: caspar <casparlant@gmail.com>
 Date:   Mon Jul 27 10:51:39 2015 +0200
